demo-app/team-b/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo
  namespace: team-b
  labels:
    team: team-b
    app: todo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-ingress
      namespace: istio-ingress
  hostnames:
    - team-b.arguswatcher.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: todo
          port: 80
          weight: 1
